--- a/week01/index.html
+++ b/week01/index.html
@@ -11,14 +11,14 @@
         <h2>Week01</h2>
         <ul>
         <li>
-            <a href="week1/events/first_event.html">Week 1 notes/exercises</a> - Not
+            <a href="events/first_event.html">Week 1 notes/exercises</a> - Not
             very many notes on this one...focused mostly on exercises
             <h3>Questions:</h3>
             <ol>
             <li>
-                Is localStorage a popular way to persist data in real world
-                applications? Or is it just a work around when we don't want to deal
-                with sessions, or even an actual database?
+                Where did the hamburger menu come from? Why did it become such a 
+                hot topic in mobile design? Even I have the desire to use it because
+                I think its "cool" design.
             </li>
             </ol>
         </li>
