--- a/week01/index.html
+++ b/week01/index.html
@@ -11,8 +11,7 @@
         <h2>Week01</h2>
         <ul>
         <li>
-            <a href="events/first_event.html">Week 1 notes/exercises</a> - Not
-            very many notes on this one...focused mostly on exercises
+            <a href="events/first-event.html">Week 1 notes/exercises</a>
             <h3>Questions:</h3>
             <ol>
             <li>
