--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h2>Block 1</h2>
         <ol>
             <li><a href="week01/">Week01</a></li>
+            <li><a href="week02/">Week01</a></li>
         </ol>
     </body>
 </html>
