--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ol>
             <li><a href="week01/">Week01</a></li>
             <li><a href="week02/">Week02</a></li>
+            <li><a href="week03/">Week03</a></li>
         </ol>
     </body>
 </html>
