--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="week01/">Week01</a></li>
             <li><a href="week02/">Week02</a></li>
             <li><a href="week03/">Week03</a></li>
+            <li><a href="week04/">Week04</a></li>
         </ol>
     </body>
 </html>
