--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="week02/">Week02</a></li>
             <li><a href="week03/">Week03</a></li>
             <li><a href="week04/">Week04</a></li>
+            <li><a href="week05/">Week05</a></li>
         </ol>
     </body>
 </html>
