--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="week03/">Week03</a></li>
             <li><a href="week04/">Week04</a></li>
             <li><a href="week05/">Week05</a></li>
+            <li><a href="week06/">Week06: TODO</a></li>
         </ol>
     </body>
 </html>
