Finished week 7 studying.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="week04/">Week04</a></li>
             <li><a href="week05/">Week05</a></li>
             <li><a href="week06/">Week06: TODO</a></li>
+            <li><a href="week07/">Week06</a></li>
         </ol>
     </body>
 </html>
