--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="week05/">Week05</a></li>
             <li><a href="week06/">Week06: TODO</a></li>
             <li><a href="week07/">Week07</a></li>
+            <li><a href="week08/">Week08</a></li>
         </ol>
     </body>
 </html>
