Completed Week09 Readings

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="week06/">Week06: TODO</a></li>
             <li><a href="week07/">Week07</a></li>
             <li><a href="week08/">Week08</a></li>
+            <li><a href="week09/">Week09</a></li>
         </ol>
     </body>
 </html>
