final Project added link

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="week08/">Week08</a></li>
             <li><a href="week09/">Week09</a></li>
             <li><a href="week10/">Week10</a></li>
+            <li><a href="final_project/">Final Project</a></li>
         </ol>
     </body>
 </html>
