--- a/final_project/index.html
+++ b/final_project/index.html
@@ -11,17 +11,16 @@
     <div class="field">
         <canvas id="canvas"></canvas>
         <div class="tools">
-            <button onClick="save_image()" type="button" class="button">Save</button>
-            <button onClick="undo_last()" type="button" class="button">Undo</button>
-            <button onClick="redo_last()" type="button" class="button">Redo</button>
-            <button onClick="clear_canvas()" type="button" class="button">Clear</button>
+            <button id="save" type="button" class="button">Save</button>
+            <button id="undo" type="button" class="button">Undo</button>
+            <button id="redo" type="button" class="button">Redo</button>
+            <button id="clear" type="button" class="button">Clear</button>
 
-            <input onInput="draw_color = this.value" type="color" class="color-picker">
-            <input type="range" min="1" max="100" class="pen-range"
-            onInput="draw_width = this.value">
+            <input type="color" class="color-picker">
+            <input type="range" min="1" max="100" class="pen-range">
         </div>
     </div>
 
 </body>
-<script src="main.js"></script>
+<script src="main.js" type="module"></script>
 </html>
